# workshop_site

./: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
nginx/: Dockerfile  nginx.conf
src/workshop_backend/: manage.py
src/workshop_backend/apps/common/: permissions.py  roles.py  urls.py  views.py
src/workshop_backend/apps/orders/: admin.py  urls.py
src/workshop_backend/apps/orders/fixtures/: brands.json  machine_types.json  order_status.json  (+2 more)
src/workshop_backend/config/: allowed_hosts.py  asgi.py  cors_allowed_origins.py  settings.py  urls.py  wsgi.py
src/workshop_backend/fixtures/: groups.json
workshop_django_project/: manage.py
workshop_django_project/account/: urls.py  views.py
workshop_django_project/account/templates/: profile.html
workshop_django_project/common/: urls.py  views.py
workshop_django_project/common/static/css/: style.css
workshop_django_project/common/templates/: about.html  base.html  contacts.html  index.html
workshop_django_project/dispatcher/: forms.py  urls.py  views.py
workshop_django_project/dispatcher/templates/: dispatcher_main_page.html
workshop_django_project/fixtures/: initial_groups_data.json
workshop_django_project/login/: urls.py  views.py
workshop_django_project/login/templates/: login.html
workshop_django_project/orders/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
workshop_django_project/parts/: models.py  serializers.py  urls.py  views.py
workshop_django_project/workshop_django_project/: asgi.py  settings.py  urls.py  wsgi.py
(+18 files in other folders)
